--- a/static_files/profile_style.css
+++ b/static_files/profile_style.css
@@ -9,7 +9,6 @@ body {
 }
 
 section {
-    overflow: scroll;
     background: linear-gradient(135deg, var(--glassGrey), var(--gradientTransparent));
     backdrop-filter: blur(20px);
     border-radius: 20px;
@@ -108,6 +107,7 @@ section {
 }
 
 .list-box {
+    overflow-x: scroll;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -442,9 +442,5 @@ button, .CRUD-btn a {
 
     section {
         margin: 10px;
-    }
-
-    ::-webkit-scrollbar {
-        height: 2px;
     }
 }
